force-app/main/default/objects/Deal_Support_Request__c/fields/Traded_YTD_FY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Traded_YTD_FY_Revenue__c</fullName>
    <description>Used in the Report for Business Sales Implementation</description>
    <formula>Organisation__r.Total_Actual_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Traded YTD/FY Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>