force-app/main/default/objects/Deal_Support_Request__c/fields/Transit_Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Transit_Cover_Type__c</fullName>
    <description>Field to represent the Transit cover type feature for a product
populated on the cart based on the Approved event on PSR</description>
    <label>Transit Cover Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc</fullName>
                <default>true</default>
                <label>Adhoc</label>
            </value>
            <value>
                <fullName>Always On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>