force-app/main/default/objects/Deal_Support_Request__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Used for Sales Implementation Request</description>
    <label>Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>