force-app/main/default/objects/Deal_Support_Request__c/fields/What_decisions_need_to_be_made_by_whom__c.field-meta.xml
<CustomField>
    <fullName>What_decisions_need_to_be_made_by_whom__c</fullName>
    <description>This field stores the details of the decisions made in the forum for Deal Governance requests</description>
    <label>What Decisions Required &amp; By whom?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>