force-app/main/default/objects/Deal_Support_Request__c/fields/What_legal_help_do_you_need__c.field-meta.xml
<CustomField>
    <fullName>What_legal_help_do_you_need__c</fullName>
    <description>Field used within Legal Support Request</description>
    <label>What legal help do you need?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tender response</fullName>
            </value>
            <value>
                <fullName>Customer’s NDA review</fullName>
            </value>
            <value>
                <fullName>Extend / Renew an existing contract</fullName>
            </value>
            <value>
                <fullName>Vary an existing contract</fullName>
            </value>
            <value>
                <fullName>Review a customer’s contract</fullName>
            </value>
            <value>
                <fullName>Review customer’s feedback on an AP contract</fullName>
            </value>
            <value>
                <fullName>Draft a document</fullName>
            </value>
            <value>
                <fullName>Advice</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>