force-app/main/default/objects/Deal_Support_Request__c/recordTypes/B_G_Deal_Desk.recordType-meta.xml
<RecordType>
    <fullName>B_G_Deal_Desk</fullName>
    <active>true</active>
    <description>Engage Deal Desk when you need resources to help you win a deal or to get a commercial outcome</description>
    <label>B&amp;G Deal Desk</label>
</RecordType>