force-app/main/default/objects/Deal_Support_Request__c/recordTypes/B_G_Deal_Governance_Operation.recordType-meta.xml
<RecordType>
    <fullName>B_G_Deal_Governance_Operation</fullName>
    <active>false</active>
    <description>Request type used manually by the B&amp;G Deal Governance Team for exception cases</description>
    <label>B&amp;G Deal Governance CoE</label>
</RecordType>