force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Bids_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Bids_Support_Request</fullName>
    <active>true</active>
    <description>Use this request type for support with Bids and Proposals</description>
    <label>Bids Support Request</label>
</RecordType>