force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Business_Sales_Implementation_Request.recordType-meta.xml
<RecordType>
    <fullName>Business_Sales_Implementation_Request</fullName>
    <active>true</active>
    <description>Use this request type to engage Business Sales Implementation once the opportunity is won &amp; the customer is ready to commence implementation</description>
    <label>Business Sales,Customer Implementation Request</label>
</RecordType>