force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Commercial_Analytics_Modelling.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Analytics_Modelling</fullName>
    <active>true</active>
    <description>Provision of analytical &amp; modelling support for opportunities.</description>
    <label>Commercial Analytics &amp; Modelling</label>
</RecordType>