force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Commit_To_Action_Propose.recordType-meta.xml
<RecordType>
    <fullName>Commit_To_Action_Propose</fullName>
    <active>true</active>
    <description>Request type used manually by the B&amp;G Deal Governance Team for exception cases</description>
    <label>Commit To Action - Propose</label>
</RecordType>