force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Credit_Management_Request.recordType-meta.xml
<RecordType>
    <fullName>Credit_Management_Request</fullName>
    <active>true</active>
    <description>Use this request type to engage support from the Credit Management Request Team</description>
    <label>Credit Management Request</label>
</RecordType>