force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Deal_Enablement_Centre.recordType-meta.xml
<RecordType>
    <fullName>Deal_Enablement_Centre</fullName>
    <active>true</active>
    <description>Support on boarding activities including agreement preparation, the creation of billing accounts, lodgement changes for contracted products and other customer on boarding tasks</description>
    <label>Customer Onboarding</label>
</RecordType>