force-app/main/default/objects/Deal_Support_Request__c/recordTypes/E_G_Sales_Implementation_Request.recordType-meta.xml
<RecordType>
    <fullName>E_G_Sales_Implementation_Request</fullName>
    <active>true</active>
    <description>Enterprise, Key, Strategic &amp; Government Sales use this request to engage Customer Implementation</description>
    <label>E&amp;G Sales,Customer Implementation Request</label>
</RecordType>