force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Legal_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Legal_Support_Request</fullName>
    <active>true</active>
    <description>Use this request form to engage the B&amp;G/P&amp;I Legal Team</description>
    <label>Legal Support Request</label>
</RecordType>