force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Pricing_Support_Request_Australia_Post_Parcel_Contract.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Support_Request_Australia_Post_Parcel_Contract</fullName>
    <active>true</active>
    <description>Record type relevant to DSR created from Apttus shopping cart for APPC products</description>
    <label>Pricing Support Request - Australia Post Parcel Contract</label>
</RecordType>