force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Pricing_Support_Request_Domestic.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Support_Request_Domestic</fullName>
    <active>true</active>
    <description>Engage support from Domestic Parcels Pricing Team regarding customised rates, business at risk due to price, where you are unable to Self Service rates, or general pricing enquiries</description>
    <label>Pricing Support Request - Domestic</label>
</RecordType>