force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Pricing_Support_Request_International.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Support_Request_International</fullName>
    <active>true</active>
    <description>Engage support from International Pricing Team regarding customised rates, business at risk due to price, where you are unable to Self Service rates, or general pricing enquiries</description>
    <label>Pricing Support Request - International</label>
</RecordType>