force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Sales_Solution_Request.recordType-meta.xml
<RecordType>
    <fullName>Sales_Solution_Request</fullName>
    <active>true</active>
    <description>Use this request type for support from a Solution Consultant or Product Specialist</description>
    <label>Sales Solution Request</label>
</RecordType>