force-app/main/default/objects/Deal_Support_Request__c/recordTypes/Surcharge_Exemption_Request.recordType-meta.xml
<RecordType>
    <fullName>Surcharge_Exemption_Request</fullName>
    <active>true</active>
    <description>Engage support from various team including Pricing, Sales, Legal to provide commercial decision whether customer can be exempted from surcharge for a certain period of time</description>
    <label>Surcharge Exemption Request</label>
</RecordType>