force-app/main/default/objects/Deal_Support_Request__c/validationRules/APPC_Validate_COMPASS_Quote_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>APPC_Validate_COMPASS_Quote_ID</fullName>
    <active>true</active>
    <description>To validate the Compass Quote ID</description>
    <errorConditionFormula>if(Compass_Quote_Reference__c!=null,NOT( REGEX(Compass_Quote_Reference__c, &apos;^[\\w]{3}-[\\w]{7}-[\\w]{10}$&apos;)),null)</errorConditionFormula>
    <errorDisplayField>Compass_Quote_Reference__c</errorDisplayField>
    <errorMessage>Incorrect Quote format. Correct format: XXX-XXXXXXX-XXXXXXXXXX</errorMessage>
</ValidationRule>