force-app/main/default/objects/Deal_Support_Request__c/validationRules/Bid_Manager_Mandatory_for_Tender_PSR.validationRule-meta.xml
<ValidationRule>
    <fullName>Bid_Manager_Mandatory_for_Tender_PSR</fullName>
    <active>true</active>
    <description>It is required to have a Bid Manger populated when Pricing Request is International or StarTrack if it is part of Tender</description>
    <errorConditionFormula>(RecordType.DeveloperName =&apos;Pricing_Support_Request_International&apos; || RecordType.DeveloperName =&apos;Pricing_Support_Request_StarTrack&apos;)&amp;&amp;
 ISPICKVAL(Tender__c,&quot;Yes&quot;) &amp;&amp; ISBLANK (Bid_Manager__c)</errorConditionFormula>
    <errorDisplayField>Bid_Manager__c</errorDisplayField>
    <errorMessage>Where the request is part of a Tender, the Bid Manager field must be completed</errorMessage>
</ValidationRule>