force-app/main/default/objects/Deal_Support_Request__c/validationRules/Check_Transit_Cover_Amount_For_Adhoc.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Transit_Cover_Amount_For_Adhoc</fullName>
    <active>true</active>
    <description>Check if the Min Transit Cover Amount populated is 0$ for Adhoc Transit Cover Type</description>
    <errorConditionFormula>AND(ISPICKVAL(Transit_Cover_Type__c, &quot;Adhoc&quot;), Min_Transit_Cover_Amount_Per_Article__c &gt;0)</errorConditionFormula>
    <errorDisplayField>Min_Transit_Cover_Amount_Per_Article__c</errorDisplayField>
    <errorMessage>Please ensure that the minimum Transit Cover amount per article is set to $0.00</errorMessage>
</ValidationRule>