force-app/main/default/objects/Deal_Support_Request__c/validationRules/Chk_Transit_Cover_Amount_For_Always_On.validationRule-meta.xml
<ValidationRule>
    <fullName>Chk_Transit_Cover_Amount_For_Always_On</fullName>
    <active>true</active>
    <description>Check if the Min Transit Cover Amount populated is between 50$ and 5000$ for Transit Cover Type =&quot;Always On&quot;</description>
    <errorConditionFormula>AND(ISPICKVAL(Transit_Cover_Type__c, &quot;Always On&quot;),  OR(Min_Transit_Cover_Amount_Per_Article__c &lt; 50,Min_Transit_Cover_Amount_Per_Article__c &gt; 5000) )</errorConditionFormula>
    <errorDisplayField>Min_Transit_Cover_Amount_Per_Article__c</errorDisplayField>
    <errorMessage>Please enter Min Transit Cover Amount Per Article between $50 and $5,000</errorMessage>
</ValidationRule>