force-app/main/default/objects/Deal_Support_Request__c/validationRules/Commercial_Analytics_Criteria_Not_Met.validationRule-meta.xml
<ValidationRule>
    <fullName>Commercial_Analytics_Criteria_Not_Met</fullName>
    <active>true</active>
    <description>STP-2299 - MC - Validate if criteria met for Commercial Analytics &amp; Modelling DSR to be created.</description>
    <errorConditionFormula>IF(RecordType.DeveloperName =&quot;Commercial_Analytics_Modelling&quot;,  
   IF(Opportunity__r.Opportunity_Annualised_Value__c &lt; 1000000,  
       IF( Opportunity__r.Has_Solution_Consultant__c = FALSE,  
            IF( Opportunity__r.Has_Product_Specialist__c = FALSE, true, false) , false) , false) , false)</errorConditionFormula>
    <errorMessage>This request does not meet the minimum opportunity criteria to request commercial analytics &amp; modelling support.</errorMessage>
</ValidationRule>