force-app/main/default/objects/Deal_Support_Request__c/validationRules/Date_Must_Be_Weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Must_Be_Weekday</fullName>
    <active>true</active>
    <description>Use in Commercial Analytics &amp; Modelling request.</description>
    <errorConditionFormula>CASE(MOD( Analytics_Required_By_Date__c  - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
    <errorMessage>Please select a weekday</errorMessage>
</ValidationRule>