force-app/main/default/objects/Deal_Support_Request__c/validationRules/Intermediary_Checked_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Intermediary_Checked_Validation</fullName>
    <active>true</active>
    <description>This rule checks if the Name of Intermediary client is not blank if request id Intermediary for pricing support request International or StarTrack</description>
    <errorConditionFormula>(RecordType.DeveloperName =&apos;Pricing_Support_Request_International&apos; || RecordType.DeveloperName =&apos;Pricing_Support_Request_StarTrack&apos;)&amp;&amp;
ISPICKVAL(Intermediary__c ,&quot;Yes&quot;) &amp;&amp; ISBLANK ( Name_of_Intermediary_s_Client__c)</errorConditionFormula>
    <errorDisplayField>Name_of_Intermediary_s_Client__c</errorDisplayField>
    <errorMessage>Where the request has an Intermediary, the intermediary&apos;s Client field must be completed</errorMessage>
</ValidationRule>