force-app/main/default/objects/Deal_Support_Request__c/validationRules/Main_Dispatch_Point_other_completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Main_Dispatch_Point_other_completion</fullName>
    <active>true</active>
    <description>This rule is to validate Main Dispatch/Lodgement Point (Other)is not blank when Main Dispatch point is &apos;Other&apos; for all pricing requests</description>
    <errorConditionFormula>BEGINS(RecordType.DeveloperName , &apos;Pricing_Support_Request&apos;)&amp;&amp;
ISPICKVAL( Main_dispatch_lodgement_point__c  ,&quot;Other&quot;) &amp;&amp; ISBLANK (Main_dispatch_lodgement_point_Other__c )</errorConditionFormula>
    <errorDisplayField>Main_dispatch_lodgement_point_Other__c</errorDisplayField>
    <errorMessage>Main Dispatch/Lodgement Point (Other) must be completed when Main Dispatch point is &apos;Other&apos;</errorMessage>
</ValidationRule>