force-app/main/default/objects/Deal_Support_Request__c/validationRules/Making_Reason_as_Mandatory_for_Roadblock.validationRule-meta.xml
<ValidationRule>
    <fullName>Making_Reason_as_Mandatory_for_Roadblock</fullName>
    <active>true</active>
    <description>This rule validates to make sure Reason field is not blank when status is Roadblock for Implementation requests</description>
    <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;Sales_Implementation&apos;) &amp;&amp;
ISPICKVAL(Status__c,&quot;Roadblock&quot;)&amp;&amp;
ISBLANK(TEXT(Reason__c))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason is required if the status of request is set as Roadblock</errorMessage>
</ValidationRule>