force-app/main/default/objects/Deal_Support_Request__c/validationRules/Mandatory_Rule_for_Deal_Enablement.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Rule_for_Deal_Enablement</fullName>
    <active>true</active>
    <description>This rule is to ensure all mandatory fields are populated before Deal enablement centre  request is submitted</description>
    <errorConditionFormula>AND(RecordType.DeveloperName =&quot;Deal_Enablement_Centre&quot;,
ISPICKVAL(Status__c,&quot;Submitted&quot;),
OR(ISBLANK(TEXT(Status__c)),ISBLANK(Product__c),ISBLANK(Organisation__c),ISBLANK(TEXT( Work_Type__c )),ISBLANK(TEXT( Support_Work_Type__c))))</errorConditionFormula>
    <errorDisplayField>Hidden_Automated_DSR__c</errorDisplayField>
    <errorMessage>Request cannot be submitted to the support team as all the mandatory fields have not been updated. Please edit the request and complete all the mandatory fields and then submit request to Support Team</errorMessage>
</ValidationRule>