force-app/main/default/objects/Deal_Support_Request__c/validationRules/Mandatory_Rule_for_PSR_International.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Rule_for_PSR_International</fullName>
    <active>true</active>
    <description>This rule is to ensure all mandatory information is populated before the PSR International request is submitted</description>
    <errorConditionFormula>AND(RecordType.DeveloperName =&quot;Pricing_Support_Request_International&quot;,
ISPICKVAL(Status__c,&quot;Submitted&quot;),
OR(ISBLANK(TEXT(Status__c)),ISBLANK(Organisation__c),ISBLANK(TEXT(Main_dispatch_lodgement_point__c)),ISBLANK(Product__c),ISBLANK(Cubic_Factor__c),ISBLANK(Average_Weight_Per_Parcel__c),ISBLANK(Estimated_Freight_Spend_Per_Annum__c),ISBLANK(Estimated_number_of_parcels_per_annum__c),ISBLANK(Sales_Justification__c),ISBLANK(TEXT(Copy_of_Current_Contract_Attached__c)),ISBLANK(TEXT(Agreement_Duration__c)),ISBLANK(Current_Rates__c),ISBLANK( Value_Proposition_to_Ensure_Win__c),ISBLANK(TEXT(Pricing_Request_Type__c))))</errorConditionFormula>
    <errorMessage>Request cannot be submitted to the support team as all the mandatory fields have not been updated. Please edit the request and complete all the mandatory fields and then submit request to Support Team</errorMessage>
</ValidationRule>